# TrafficSign-System

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: .env  main.py
backend/app/api/: endpoints.py  websocket.py
backend/app/core/: database.py
backend/app/models/: tables.py
backend/app/schemas/: schemas.py
backend/app/services/: inference.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ControlPanel.jsx  HeadUpDisplay.jsx  VideoTelemetry.jsx
frontend/src/config/: trafficSigns.js
frontend/src/hooks/: useTelemetrySocket.js
frontend/src/pages/: CockpitPage.jsx  LoginPage.jsx  ProfilePage.jsx  SetupPage.jsx  TripReportModal.jsx
frontend/src/services/: api.js
